force-app/main/default/objects/Contact/fields/Active_Membership_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Membership_End_Date__c</fullName>
    <formula>Account.Active_Membership_End_Date__c</formula>
    <label>Active Membership End Date</label>
    <type>Date</type>
</CustomField>