force-app/main/default/objects/Contact/fields/Active_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Active_Membership_Type__c</fullName>
    <formula>Account.Active_Membership_Type__c</formula>
    <label>Active Membership Type</label>
    <type>Text</type>
</CustomField>