force-app/main/default/objects/Contact/fields/caseman__Age__c.field-meta.xml
<CustomField>
    <fullName>caseman__Age__c</fullName>
    <formula>IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
            YEAR (TODAY()) - YEAR ( Birthdate ),
            YEAR (TODAY()) - YEAR ( Birthdate ) -1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>