force-app/main/default/objects/Contact/fields/caseman__ClientID__c.field-meta.xml
<CustomField>
    <fullName>caseman__ClientID__c</fullName>
    <description>If you have Client IDs for your clients you can import them to this field.</description>
    <label>Client ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>