force-app/main/default/objects/Contact/fields/caseman__PreferredPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>caseman__PreferredPhoneNumber__c</fullName>
    <description>This field is controlled by the Preferred Phone Field picklist.</description>
    <inlineHelpText>This field is controlled by the Preferred Phone Field picklist.</inlineHelpText>
    <label>Preferred Phone Number</label>
    <type>Phone</type>
</CustomField>