force-app/main/default/objects/Contact/fields/caseman__WatchList__c.field-meta.xml
<CustomField>
    <fullName>caseman__WatchList__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this checkbox if this client requires heightened attention by staff.</description>
    <inlineHelpText>Check this checkbox if this client requires heightened attention by staff.</inlineHelpText>
    <label>Watch List</label>
    <type>Checkbox</type>
</CustomField>