force-app/main/default/objects/Contact/fields/caseman__WatchListDate__c.field-meta.xml
<CustomField>
    <fullName>caseman__WatchListDate__c</fullName>
    <description>The date you added the client to the Watch List.</description>
    <inlineHelpText>The date you added the client to the Watch List.</inlineHelpText>
    <label>Watch List Date</label>
    <type>Date</type>
</CustomField>