force-app/main/default/objects/Contact/fields/Craft_Site_Membership__c.field-meta.xml
<CustomField>
    <fullName>Craft_Site_Membership__c</fullName>
    <label>Craft Site Membership</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>academy</fullName>
            </value>
            <value>
                <fullName>smallBusinessHub</fullName>
            </value>
            <value>
                <fullName>memberHub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>