force-app/main/default/objects/Contact/fields/Craft_User_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Craft_User_Last_Login__c</fullName>
    <label>Craft User Last Login</label>
    <type>DateTime</type>
</CustomField>