force-app/main/default/objects/Contact/fields/EmailAddress2__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress2__c</fullName>
    <description>A secondary email address for the individual.</description>
    <label>Email Address 2</label>
    <type>Email</type>
</CustomField>