force-app/main/default/objects/Contact/fields/EmailAddress3__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress3__c</fullName>
    <description>An additional email address for the individual.</description>
    <label>Email Address 3</label>
    <type>Email</type>
</CustomField>