force-app/main/default/objects/Contact/fields/MSA_Mailing_List__c.field-meta.xml
<CustomField>
    <fullName>MSA_Mailing_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSA Mailing List</label>
    <type>Checkbox</type>
</CustomField>