force-app/main/default/objects/Contact/fields/PhoneNumber2__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber2__c</fullName>
    <description>A secondary contact phone number for the individual.</description>
    <label>Phone Number 2</label>
    <type>Phone</type>
</CustomField>