force-app/main/default/objects/Contact/fields/PhoneNumber3__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber3__c</fullName>
    <description>An additional contact phone number for the individual.</description>
    <label>Phone Number 3</label>
    <type>Phone</type>
</CustomField>