force-app/main/default/objects/Contact/validationRules/Require_Reason_for_Payment_Correction.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason_for_Payment_Correction</fullName>
    <active>true</active>
    <description>Ensures that if the &apos;Payment Correction Needed&apos; checkbox is true, the &apos;Payment Correction Reason&apos; field must be filled out before the record can be saved.</description>
    <errorConditionFormula>AND(
    Payment_Correction_Needed__c = TRUE,
    ISBLANK(Payment_Correction_Reason__c)
)</errorConditionFormula>
    <errorMessage>You must provide a reason in the &apos;Payment Correction Reason&apos; field when the &apos;Payment Correction Needed&apos; checkbox is selected.</errorMessage>
</ValidationRule>